🎨 style(K-means.ipynb): add code to generate sample data for K-means clustering The notebook now includes code to generate sample data for K-means clustering. The data consists of four clusters with means at (2,2), (3,7), (7,3), and (8,8) and covariances of [1,0] and [0,1]. The sample size is set to 500. The code also includes a print statement to display the generated data.

--- a/23-Jun-2023 - Learn K-means.ipynb
+++ b/23-Jun-2023 - Learn K-means.ipynb
@@ -2,14 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-06-23T01:21:34.646995100Z",
+     "start_time": "2023-06-23T01:21:29.989494600Z"
+    }
    },
    "outputs": [],
    "source": [
-    ""
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import KMeans"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 2], [3, 7], [7, 3], [8, 8]]\n",
+      "[[1, 0], [0, 1]]\n",
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "means = [\n",
+    "    [2, 2],\n",
+    "    [3, 7],\n",
+    "    [7, 3],\n",
+    "    [8, 8]\n",
+    "]\n",
+    "\n",
+    "covariances = [\n",
+    "    [1, 0],\n",
+    "    [0, 1]\n",
+    "]\n",
+    "\n",
+    "N = 500\n",
+    "\n",
+    "print(means)\n",
+    "print(covariances)\n",
+    "print(N)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-23T01:24:10.838868Z",
+     "start_time": "2023-06-23T01:24:10.833580200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
