📝 docs(K-means.ipynb): add code to generate random class 0 Added code to generate a random class 0 using the numpy.random.multivariate_normal function. This code generates 100 data points with a mean of means[0] and a covariance of covariances.

--- a/23-Jun-2023 - Learn K-means.ipynb
+++ b/23-Jun-2023 - Learn K-means.ipynb
@@ -60,6 +60,40 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Tạo class 0 bằng random"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 2.00033788,  2.64348313],\n       [ 2.21932243,  1.26609526],\n       [ 3.57788139,  2.27654974],\n       [ 2.98248908,  2.76667051],\n       [ 3.27481183,  1.65916632],\n       [ 3.5626262 ,  3.51814995],\n       [ 1.36530464,  3.06877551],\n       [ 2.90230483,  3.46303106],\n       [ 1.07159282,  0.91784669],\n       [ 1.60199904,  1.63681163],\n       [ 1.81322253,  2.93991555],\n       [ 2.02215994,  1.82024586],\n       [ 1.11087757,  3.79984871],\n       [ 1.58635769,  2.06491206],\n       [ 1.55295825,  2.04149114],\n       [ 1.83549487,  2.41953933],\n       [ 1.90505816,  1.33242058],\n       [ 1.42023104,  2.40158742],\n       [ 0.78345302,  3.04359368],\n       [ 3.51429044,  3.45441446],\n       [ 1.39002623,  1.50795575],\n       [ 0.77614063,  2.3927889 ],\n       [ 1.31564622,  3.51371321],\n       [ 1.91854409,  0.63877537],\n       [ 1.3541775 ,  2.69322165],\n       [ 0.38404707,  1.5652718 ],\n       [ 2.90538288,  1.37898441],\n       [ 2.44829965,  1.97850331],\n       [ 1.03627815,  1.55112333],\n       [ 2.07492123,  0.59744522],\n       [ 2.47108583,  2.55223535],\n       [ 2.08083155,  2.6006199 ],\n       [ 1.89094973,  2.6845924 ],\n       [ 2.41324104,  2.10604137],\n       [ 2.76903827,  3.99698222],\n       [ 2.62696687,  1.33633622],\n       [ 3.63542223,  1.81690971],\n       [ 2.66347804,  2.78883141],\n       [ 0.85394824,  1.36587792],\n       [ 2.04323022,  2.48729353],\n       [ 4.41012117,  1.75501487],\n       [ 2.82389206,  1.35474105],\n       [ 2.95856401,  1.90377494],\n       [ 0.86740672,  2.26827166],\n       [ 1.16663478,  0.77926767],\n       [ 3.55512165,  1.33739812],\n       [ 4.41619681,  1.84157058],\n       [ 2.16683376,  1.70332857],\n       [ 1.26280367,  3.81604397],\n       [ 2.58891731,  1.96031767],\n       [ 3.04949514,  1.79252719],\n       [ 2.29536649,  2.28039172],\n       [ 4.21314062,  1.29686826],\n       [ 1.81935995,  3.76583328],\n       [ 3.88829593,  0.49459567],\n       [ 1.73184103,  1.51014705],\n       [ 2.616608  ,  2.95433132],\n       [ 1.89725038,  1.62305839],\n       [ 0.95919413,  1.33901332],\n       [ 1.83955246,  1.39610365],\n       [ 2.07542088,  1.42175044],\n       [ 1.262615  ,  3.47230234],\n       [ 2.8892191 ,  2.88834587],\n       [ 1.26947022,  2.07421238],\n       [ 2.19182753,  2.16256094],\n       [ 0.56969756,  2.33314141],\n       [ 2.98863839,  3.49650069],\n       [ 2.63672618,  1.33471113],\n       [ 3.4935401 ,  0.98855163],\n       [ 4.22225021, -0.64745933],\n       [ 2.91556119,  1.47477113],\n       [ 3.89443121,  1.19527615],\n       [ 2.26672821,  2.99170588],\n       [ 2.68427188,  1.0821834 ],\n       [ 3.30767727,  1.54761771],\n       [ 2.52640272,  1.94046198],\n       [ 2.64125951,  3.20820128],\n       [ 2.70062912,  2.00743586],\n       [ 1.38629166,  3.49198576],\n       [ 3.28455537,  1.52603671],\n       [ 2.08506959,  2.94468517],\n       [ 0.74879216,  2.68986752],\n       [ 2.23375397,  2.90724724],\n       [ 2.36749333,  1.49221316],\n       [ 0.34036803,  3.61033511],\n       [ 2.79001933,  1.71181682],\n       [ 1.62872558,  2.62090834],\n       [ 1.65247442,  2.36149677],\n       [ 2.39639044, -0.2654132 ],\n       [ 1.50330632,  1.22068221],\n       [ 2.98053707,  2.08246565],\n       [ 2.72130071,  1.68074051],\n       [ 2.02658537,  2.97425852],\n       [ 2.09407657,  2.32336185],\n       [ 2.68083902,  2.72909044],\n       [ 2.71167896,  0.81288873],\n       [ 1.52260377,  1.39097329],\n       [ 4.35226806,  1.86801166],\n       [ 2.16486843,  2.05470031],\n       [ 1.17481029,  0.57276388]])"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class0 = np.random.multivariate_normal(means[0], covariances, 100)\n",
+    "class0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-23T01:35:55.923706400Z",
+     "start_time": "2023-06-23T01:35:55.850784600Z"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
