Print mnist.target

--- a/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
+++ b/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
@@ -97,11 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0        5\n1        0\n2        4\n3        1\n4        9\n        ..\n69995    2\n69996    3\n69997    4\n69998    5\n69999    6\nName: class, Length: 70000, dtype: category\nCategories (10, object): ['0', '1', '2', '3', ..., '6', '7', '8', '9']"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_all = mnist.target\n",
+    "y_all"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-23T06:59:53.487244300Z",
+     "start_time": "2023-06-23T06:59:53.468060200Z"
+    }
    }
   }
  ],
