Get class 0 label

--- a/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
+++ b/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
@@ -174,11 +174,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0., 0., 0., ..., 0., 0., 0.])"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y0 = np.zeros(X_0.shape[0]) # class 0 label\n",
+    "y0"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-23T07:07:32.478297900Z",
+     "start_time": "2023-06-23T07:07:32.458525Z"
+    }
    }
   }
  ],
