Get class 1 label

--- a/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
+++ b/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
@@ -196,6 +196,40 @@
      "start_time": "2023-06-23T07:07:32.458525Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1., 1., 1., ..., 1., 1., 1.])"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y1 = np.ones(X_1.shape[0]) # class 1 label\n",
+    "y1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-23T07:21:43.447371900Z",
+     "start_time": "2023-06-23T07:21:43.417916700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
