Get all digits 0 and 1

--- a/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
+++ b/23-Jun-2023 - MNIST - Recognize 0 and 1.ipynb
@@ -224,6 +224,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       ...,\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.]])"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.concatenate((X_0, X_1), axis=0) # all digits 0 and 1\n",
+    "X"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-23T07:23:19.644247500Z",
+     "start_time": "2023-06-23T07:23:19.588707100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
