📝 docs(30-Jun-2023.ipynb): update code cell to create a 1D array from 0 to 9 using numpy.arange() The code cell has been updated to create a 1D array from 0 to 9 using the numpy.arange() function. This change improves the clarity of the code and makes it easier to understand the purpose of the cell.

--- a/30-Jun-2023.ipynb
+++ b/30-Jun-2023.ipynb
@@ -1,15 +1,39 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "Q1: Create 1D from 0 to 9 => b"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.arange(0, 10, 1) # numpy.arange([start, ]stop, [step, ]dtype=None, *, like=None)\n",
+    "a"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T00:46:10.658970400Z",
+     "start_time": "2023-06-30T00:46:10.644788Z"
+    }
+   }
   }
  ],
  "metadata": {
