--- a/30-Jun-2023/Use  Logistic Regression with Iris dataset.ipynb
+++ b/30-Jun-2023/Use  Logistic Regression with Iris dataset.ipynb
@@ -7,7 +7,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import datasets\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
   }
  ],
  "metadata": {
