--- a/30-Jun-2023/Use  Logistic Regression with Iris dataset.ipynb
+++ b/30-Jun-2023/Use  Logistic Regression with Iris dataset.ipynb
@@ -2,18 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T01:59:55.099632600Z",
+     "start_time": "2023-06-30T01:59:51.920868100Z"
+    }
    },
    "outputs": [],
    "source": [
     "import numpy as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import datasets\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
