--- a/16-Jun-2023/16-Jun-2023 - Car Manufacturer.ipynb
+++ b/16-Jun-2023/16-Jun-2023 - Car Manufacturer.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel('car-man-predict.xlsx')\n",
+    "df = pd.read_excel('user_data.xlsx')\n",
     "df"
    ],
    "metadata": {
