🔬 chore(Use Logistic Regression with Iris dataset.ipynb): add code to load and preprocess Iris dataset 📊 feat(Use Logistic Regression with Iris dataset.ipynb): load and preprocess the Iris dataset for further analysis The code has been added to load the Iris dataset using the `datasets.load_iris()` function from the `sklearn` library. The dataset is then preprocessed by extracting the features and targets. The features are stored in separate variables for each type of iris. This allows for further analysis and modeling using the Logistic Regression algorithm.

--- a/30-Jun-2023/Use  Logistic Regression with Iris dataset.ipynb
+++ b/30-Jun-2023/Use  Logistic Regression with Iris dataset.ipynb
@@ -23,6 +23,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "iris_dataset = datasets.load_iris()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T02:00:58.114569Z",
+     "start_time": "2023-06-30T02:00:58.096637700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "iris_features = iris_dataset.data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T02:13:39.371709600Z",
+     "start_time": "2023-06-30T02:13:39.353426100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "iris_targets = iris_dataset.target"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T02:14:04.610823200Z",
+     "start_time": "2023-06-30T02:14:04.592730200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "iris_type0_features = iris_features[iris_targets == 0,:]\n",
+    "iris_type1_features = iris_features[iris_targets == 1,:]\n",
+    "iris_type2_features = iris_features[iris_targets == 2,:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T02:14:44.691122500Z",
+     "start_time": "2023-06-30T02:14:44.671083900Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
